Add extension setup for Qwen 3, Gemma 3, and GPT-5 Mini external judge
New models added to configs/models.yaml:
- Qwen/Qwen3-8B (8.2B params, instruction-tuned)
- google/gemma-3-12b-it (12B params, instruction-tuned)

New scripts for external judge validation:
- scripts/11_batch_judge_openai.py: OpenAI Batch API judging with GPT-5 Mini
- scripts/12_compare_judges.py: Inter-judge agreement analysis

This addresses reviewer critiques:
- "Limited to 7-8B models" -> Now includes 12B Gemma 3
- "Only 2 models" -> Now 5 models across 3 families (Llama, Qwen, Google)
- "Same-family judge" -> GPT-5 Mini as external judge validation

--- a/configs/models.yaml
+++ b/configs/models.yaml
@@ -22,6 +22,21 @@ models:
     size: "7B"
     requires_auth: false
 
+  # NEW MODELS for extended evaluation
+  qwen-3-8b:
+    hf_name: "Qwen/Qwen3-8B"
+    short_name: "Qwen3-8B"
+    family: "qwen"
+    size: "8B"
+    requires_auth: false
+
+  gemma-3-12b-it:
+    hf_name: "google/gemma-3-12b-it"
+    short_name: "Gemma3-12B"
+    family: "google"
+    size: "12B"
+    requires_auth: true  # Gemma requires accepting license on HF
+
 # Judge model configuration
 judge:
   hf_name: "meta-llama/Llama-3.1-70B-Instruct"
